--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "http-proxy-agent": "^7.0.2",
     "mongoose": "^8.5.0",
+    "node-cron": "^3.0.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
